--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
     "mongoose": "^8.19.2",
     "next": "14.1.4",
     "picocolors": "^1.1.1",
