--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspdf": "^3.0.4",
     "mongoose": "^8.19.2",
     "next": "14.1.4",
+    "next-auth": "^4.24.13",
     "picocolors": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
