--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
     "mongoose": "^8.19.2",
@@ -20,6 +21,7 @@
     "next-auth": "^4.24.13",
     "picocolors": "^1.1.1",
     "react": "^18",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
     "validator": "^13.15.20"
   }
