--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.6.0",
     "validator": "^13.15.20"
   }
 }
