--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "aos": "^2.3.4",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
     "mongoose": "^8.19.2",
@@ -24,6 +27,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.7.0",
     "validator": "^13.15.20"
   }
 }
