--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "picocolors": "^1.1.1",
     "react": "^18",
     "react-chartjs-2": "^5.3.1",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.7.0",
